--- a/v1/key.css
+++ b/v1/key.css
@@ -1,13 +1,13 @@
 .keys {
   width: 800px;
-  display: block;
+  display: inline-block;
   margin: 35vh auto;
 }
 
 .key__button {
   box-sizing: border-box;
   line-height: 80px;
-  font-size: 22px;
+  font-size: 50px;
   text-align: center;
   width: 80px;
   color: #555;
@@ -18,7 +18,7 @@
   border-style: solid;
   text-shadow: 0 0.5px 1px #777, 0 2px 6px #f2f2f2;
   border-width: 1px;
-  border-radius: 10px;
+  border-radius: 50%;
   background: -webkit-linear-gradient(
     top,
     #f9f9f9 0%,
@@ -46,4 +46,10 @@
     0 0px 30px rgba(#444, 0.15), 2px 2px 4px rgba(#444, 0.25),
     -2px 2px 4px rgba(#444, 0.25), 0 0px 4px rgba(#444, 0.25);
   transform: translateY(4px);
+}
+
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 0px 16px;
 }
