--- a/ringfitter-master/src/styles/menuContainer.css
+++ b/ringfitter-master/src/styles/menuContainer.css
@@ -11,7 +11,7 @@ body {
     right: 0;
     top: 0;
     height: 100vh;
-    background-color: rgba(255, 255, 255, 0.082);
+    background-color: rgba(255, 255, 255, 0.596);
     z-index: 9001;
     display: flex;
     flex-direction: row;
@@ -68,15 +68,23 @@ body {
 }
 
 .ringMenu {
-    position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.064);
-  display: flex;
-  justify-content: space-around;
-  padding: 10px;
-  z-index: 100;
+    position: absolute;
+    top: 50vh;
+    left: 50vw;
+    width: 170px;
+    height: 330px;
+    margin-left: -85px;
+    margin-top: -165px;
+    z-index: 9001;
+    background-color: rgba(255, 255, 255, 0.596);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    align-self: center;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .ring {
